force-app/main/default/objects/Playlist_Song__c/fields/Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Duration_Min__c</fullName>
    <formula>Duration_Seg__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration_Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>