force-app/main/default/objects/Playlist_Song__c/fields/Duration_Seg__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seg__c</fullName>
    <label>Duration_Seg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>