force-app/main/default/objects/Playlist_Song__c/fields/Song_Id__c.field-meta.xml
<CustomField>
    <fullName>Song_Id__c</fullName>
    <label>Song_Id</label>
    <referenceTo>Song__c</referenceTo>
    <relationshipLabel>Playlist_Songs</relationshipLabel>
    <relationshipName>Playlist_Songs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>