force-app/main/default/objects/Playlist_Song__c/fields/User_Playlist_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Playlist_Id__c</fullName>
    <label>User_Playlist_Id</label>
    <referenceTo>User_Playlist__c</referenceTo>
    <relationshipLabel>Playlist_Songs</relationshipLabel>
    <relationshipName>Playlist_Songs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>